--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 .subcriptionBanner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(images/backgrounds/pricing.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(images/bgs/pricing.jpg);
     background-size: cover;
     background-position: center; 
     overflow: hidden;
@@ -20,7 +20,16 @@
 .chisiamoBanner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(images/backgrounds/pricing.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(images/bgs/pricing.jpg);
+    background-size: cover;
+    background-position: center; 
+    overflow: hidden;
+}
+
+.contattaciBanner{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(images/bgs/pricing.jpg);
     background-size: cover;
     background-position: center; 
     overflow: hidden;
@@ -29,7 +38,7 @@
 .homeBanner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(images/backgrounds/aesthetic.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(images/bgs/aesthetic.jpg);
     background-size: cover;
     background-position: center; 
     overflow: hidden;    
@@ -119,7 +128,7 @@
 .sediBanner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(images/backgrounds/darkbg.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(images/bgs/darkbg.jpg);
     background-size: cover;
     background-position: center; 
     overflow: hidden;
@@ -160,7 +169,7 @@
 
 .sediContent h2{
     font-size: 70px;
-    margin-top: 80px;
+    margin-top: 5px;
 }
 
 .sediContent p{
@@ -184,10 +193,34 @@
 
 .chisiamoContent h1{
     font-size: 70px;
-    margin-top: 80px;
+    margin-top: 5px;
 }
 
 .chisiamoContent p{
+    margin: 20px auto;
+    font-weight: 100;
+    line-height: 25px;
+}
+
+.abbonamentiContent{
+    width: 100%;
+    position: top;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    color: #fff;
+    opacity: 0;
+    animation: fadeInDrop 1s ease forwards;
+    position: relative;
+    top: -50px;
+}
+
+.abbonamentiContent h1{
+    font-size: 70px;
+    margin-top: 315px;
+}
+
+.abbonamentiContent p{
     margin: 20px auto;
     font-weight: 100;
     line-height: 25px;
@@ -322,4 +355,162 @@ button{
 
 .price-col button:hover{
     background: #9085da;
+}
+
+.mappa{
+    margin: -300px 480px;
+    width: 50%;
+    border: 3px solid transparent;
+    padding: 8px;
+    opacity: 0;
+    animation: fadeInDrop 1s ease forwards;
+    position: relative;
+    top: -50px;
+    text-align: center;
+}
+
+.mappa h3{
+    margin: 0 100px;
+    text-align: auto;
+    color: fff;
+}
+
+.mappa img{
+    border-radius: 9%;
+}
+
+.chiSiamoprice-col {
+    background: #5c539d;
+    padding: 15% 15%;
+    border-radius: 10px;
+    color: #fff;
+    text-align: center;
+    opacity: 0;
+    animation: fadeInDrop 1s ease forwards;
+    position: relative;
+    top: -50px;
+    width: 470px;
+    margin: 0 -50px;
+}
+
+.chiSiamoprice-col p{
+    font-size: 30px;
+}
+
+.chiSiamoprice-row {
+    width: 100%; 
+    max-width: 1100px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(366px, 75px)); 
+    grid-gap: 10px;
+    margin: -30px -37px;
+}
+
+.image-left img{
+  
+    border-radius: 18px;
+    margin: -50px 295px;
+    position: relative;
+    width: 280px;
+    height: 630px;
+    opacity: 0;
+    animation: fadeInDrop 1s ease forwards;
+    position: relative;
+    top: -50px;
+}
+
+.image-right img{
+    border-radius: 18px;
+    margin: 0 1030px;
+    position: relative;
+    width: 360px;
+    height: 580px;
+    opacity: 0;
+    animation: fadeInDrop 1s ease forwards;
+    position: relative;
+    top: -50px;
+}
+
+.contattaciContainer{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    opacity: 0;
+    animation: fadeInDrop 1s ease forwards;
+    position: relative;
+    top: -50px;
+}
+
+.contattaciSinistra{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+    margin-bottom: 300px;
+}
+
+.contattaciSinistraTitolo h2{
+    font-weight: 600;
+    color: #fff;
+    font-size: 40px;
+    margin-bottom: 5px;
+}
+
+.contattaciSinistraTitolo hr{
+    border: none;
+    width: 120px;
+    height: 5px;
+    background-color: #5c539d;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.contattaciInput{
+    width: 400px;
+    height: 50px;
+    border: none;
+    outline: none;
+    padding-left: 25px;
+    font-weight: 500;
+    color: #666;
+    border-radius: 50px;
+}
+
+.contattaciSinistra textarea{
+    height: 140px;
+    padding-top: 15px;
+    border-radius: 20px;
+}
+
+.contattaciInput:focus{
+    border: 2px solid #5c539d;
+}
+
+.contattaciInput::placeholder{
+    color: #a9a9a9;
+}
+
+.contattaciSinistra button{
+    display: flex;
+    align-items: center;
+    padding: 15px 30px;
+    font-size: 16px;
+    color: #fff;
+    gap: 10px;
+    border: none;
+    border-radius: 50px;
+    background: linear-gradient(270deg, rgb(50, 65, 192), #9085da);
+    cursor: pointer;
+}
+
+.contattaciSinistra button img {
+    height: 15px;
+}
+
+.contattaciDestra img {
+    width: 500px;
+    margin-bottom: 300px;
+    filter:sepia(1) hue-rotate(180deg);
 }
